--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
     <!-- Personalized styles -->
     <link rel="stylesheet" href="/css/styles.css">
@@ -54,7 +54,7 @@
     <!-- Main -->
 
     <main id="main">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="/assets/images/hawaii.jpg" alt="First slide" data-pause="false">
@@ -74,6 +74,24 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
             </a> -->
+            <div class="overlay">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-md-6 offset-md-6 text-right">
+                            <h1>Platzi Conf Hawaii</h1>
+                            <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii!
+                                Un evento para compartir con nuestra comunidad el conocimiento
+                                y experiencia de los expertos que están creando el 
+                                futuro de internet.
+                                Ven a conocer miembros del team Platzi, a otros estudiantes de Platzi
+                                y a otros ordadores de primer nivel que tenemos para ti. Te esperamos!
+                            </p>
+                            <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                            <button type="button" class="btn btn-platzi">Quiero comprar tickets</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
